# pPIM-compiler

./: CMakeLists.txt  README.md  test_matrix_mult.cpp
include/backend/code_generator/: code_generator.h
include/backend/instruction_selector/: instruction_selector.h
include/backend/memory_mapper/: memory_mapper.h
include/backend/simd/: simd_generator.h
include/frontend/ir_generator/: ir_generator.h
include/frontend/matrix_analyzer/: matrix_analyzer.h
include/frontend/parser/: ast.h  lexer.h  parser.h
include/middle_end/optimization/: optimizer.h
include/support/isa/: pPIM_isa.h
include/test/: test_framework.h
src/: main.cpp
src/backend/code_generator/: code_generator.cpp
src/backend/instruction_selector/: instruction_selector.cpp
src/backend/memory_mapper/: memory_mapper.cpp
src/backend/simd/: simd_generator.cpp
src/frontend/ir_generator/: ir_generator.cpp
src/frontend/matrix_analyzer/: matrix_analyzer.cpp
src/frontend/parser/: ast.cpp  lexer.cpp  parser.cpp
src/middle_end/optimization/: optimizer.cpp
src/support/isa/: pPIM_isa.cpp
src/test/: ir_generator.cpp  isa_generator.cpp  lookup_table.txt  matr.cpp  matr.ir  matrix_mul.isa  test_framework.cpp  test_main.cpp
test/: test_matrix_mult_pPIM.cpp
